--- a/views/vwStudents/list.handlebars
+++ b/views/vwStudents/list.handlebars
@@ -1,3 +1,7 @@
+{{#section 'title'}}
+- List Student
+{{/section}}
+
 <div class="card">
     <div class="card-header d-flex justify-content-between">
         <h4>Students</h4>
