--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -5,53 +5,70 @@
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/">
+                    Home 
+                    <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/account/login">Login</a>
+                  <a class="nav-link" href="/">
+                  link
+                  </a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Welcome, <b>admin</b>!
+                    Dropdown
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/account/profile">
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                    Profile</a>
+                    <a class="dropdown-item" href="/">
+                    Something 1</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="javascript:;">
-                      <i class="fa fa-sign-out" aria-hidden="true"></i>
-                      Logout</a>
+                      Something 2</a>
                   </div>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
               </ul>
-              <form class="form-inline my-2 my-lg-0 mr-auto">
+              <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               </form>
               <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="/account/login">Login</a>
-                </li>
+                {{#if lcIsAuthenticated}}
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Welcome, <b>admin</b>!
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    Hi, <b>{{lcAuthUser.TenDN}}</strong>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/account/profile">
                     <i class="fa fa-user" aria-hidden="true"></i>
-                    Profile</a>
+                    Profile
+                    </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="javascript:;">
+                    <a class="dropdown-item" href="/account/logout">
                       <i class="fa fa-sign-out" aria-hidden="true"></i>
-                      Logout</a>
+                      Logout
+                      </a>
                   </div>
                 </li>
+                {{else}}
+                <li class="nav-item">
+                  <a class="nav-link" href="/account/login">
+                  <i class="fa fa-sign-in" aria-hidden="true"></i>
+                  Login
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/account/register">
+                  <i class="fa fa-user-plus" aria-hidden="true"></i>
+                  Register
+                  </a>
+                </li>
+                {{/if}}
               </ul>
             </div>
           </nav>
