--- a/views/vwStudents/edit.handlebars
+++ b/views/vwStudents/edit.handlebars
@@ -1,7 +1,3 @@
-{{#section 'title'}}
-- Edit Student
-{{/section}}
-
 <div class="card">
     <div class="card-header">
         <h4>Edit students</h4>
@@ -41,3 +37,23 @@
         Footer
     </div>
 </div>
+
+{{#section 'title'}}
+- Edit Student
+{{/section}}
+
+{{#section 'js'}}
+<script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
+<script>
+    $('#txtBirth').datetimepicker({
+        format: 'Y-m-d',
+        timepicker: false,
+        mask: true,
+    });
+
+    function validate(){
+        return true;
+    }
+</script>
+{{/section}}
